discussion/kv_engine/187792/187792_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

Change the protocol specification to be usable on the server

Uniquely identify the "URL" of a document by inserting
the scope id, collection id, vbucket id in the request.
By keeping this in its own message we only need to
document it once (and changes / bug fixes only needs
to be fixed in one place rather in all messages which
needs the extension later on)

The scope/collection id vs names is an optimization so
that the server don't need to perform the textual lookup
every time (and in order for sane operation the client
would have to pass along the uuid to avoid undefined
behavior after a drop/recreate).

By passing along the vbucket id the server don't need
to be in the "proxy business" and can leave that to
a stellar gateway or the client. (The stellar gateway
could tell the clients that it is responsible for all
vbuckets and perform all proxying and not-my-vbucket
handling).

@todo add back Subdoc and RangeScan

Change-Id: I98a9140b99b11540c5b2a6b94096b63d8c842551

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-08 11:47:14.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Vesko Karaganev
Date: 2023-03-08 12:02:57.000000000
Message: 
Patch Set 17:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-08 12:12:30.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22881/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:11:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/json_conversion.h:13:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22881/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22881/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52333/ : FAILURE

Failure of GoogleTest "TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_stats.cc(302): error: Value of: stats.empty()
  Actual: true
Expected: false
[  FAILED  ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl, where GetParam() = McbpSsl (4 ms)
TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52333/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25402/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25402/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43897/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23116/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12613/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1682/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24517/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24944/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26255/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33360/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12693/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-03-09 06:53:34.000000000
Message: 
Patch Set 17:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-03-09 09:12:49.000000000
Message: 
Abandoned

Added a patch which just puts in the new prototype: https://review.couchbase.org/c/kv_engine/+/187949
----------------------------------------------------------------------------------------------------------------------
